# aapor_short_course_may2022

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 1_Introduction.pptx  1_introduction.ipynb  2_Basics_of_Python.ipynb  3_Pandas_The_Python_DataFrame.ipynb  4_Introduction_to_Sampling.pptx  5_Sample_size_calculation.ipynb  5_Sample_size_calculation_with_answers.ipynb  6_Selection.ipynb  6_Selection_with_answers.ipynb  7_Estimation.ipynb  data.csv  psu_sample.csv  ssu_sample.csv  ~$4_Introduction_to_Sampling.pptx
notebooks/html/: 1_Introduction.pptx  2_Basics_of_Python.html  3_Pandas_The_Python_DataFrame.html  5_Sample_size_calculation.html  5_Sample_size_calculation_with_answers.html  6_Selection.html  6_Selection_with_answers.html  7_Estimation.html
