[tool.poetry]
name = "samplics_short_course_aapor22"
version = "0.1.0"
description = "Samplics: Survey Sampling from A to Z in Python"
authors = ["Mamadou S Diallo <me@msdiallo.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
samplics = "^0.3.13"
jupyterlab = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
